[package]
name = "platform"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-sdk-dynamodb = "1"
aws-sdk-eventbridge = "1"
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "2"
x402-axum = "1.4"
x402-types = "1.4"
x402-chain-eip155 = { version = "1.4", features = ["server"] }
alloy-primitives = "1"

[dev-dependencies]
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[example]]
name = "x402-test-server"
